<resources>
    <string name="todo">TODO</string>
    <string name="app_name">MyDracma</string>
    <string name="app_goal">Personal Finance Administrator</string>
    <string name="lbl_Create">Create</string>
    <string name="lbl_Update">Update</string>
    <string name="lbl_Close">Close</string>
    <string name="lbl_Change">Change</string>
    <string name="lbl_Delete">Delete</string>
    <string name="lbl_Next">Next</string>
    <string name="lbl_Previous">Previous</string>
    <string name="lbl_Payments">Payments</string>
    <string name="lbl_Insurance">Insurance</string>
    <string name="lbl_NetWorth">Net worth</string>
    <string name="lbl_Loan">Loan</string>
    <string name="lbl_Reset">Reset</string>
    <string name="lbl_Upload">Upload</string>
    <string name="lbl_Download">Download</string>
    <string name="lbl_Print">Print</string>
    <string name="lbl_Template">Template</string>
    <string name="lbl_MyDracmaImage">MyDracma Image</string>
    <string name="lbl_Color">Color</string>
    <string name="lbl_CreatedByUser">Created by user</string>
    <string name="lbl_UsageCounter">Usage counter</string>
    <string name="lbl_FinancialHealth">Financial Health</string>
    <string name="lbl_UserAgreement">User agreement</string>
    <string name="lbl_CreateAppData">Create app data</string>
    <string name="lbl_Investment">Investment</string>
    <string name="lbl_logIn">LogIn</string>
    <string name="lbl_logOut">LogOut</string>
    <string name="lbl_signIn">SigIn</string>
    <string name="lbl_signOut">SignOut</string>
    <string name="lbl_changePassword">Change Password</string>
    <string name="lbl_changeEmail">Change Email</string>
    <string name="lbl_notification">Notification</string>
    <string name="lbl_reset">Reset</string>
    <string name="lbl_userMaintenance">Maintain user</string>
    <string name="lbl_AccountFrom">Account from</string>
    <string name="lbl_AccountTo">Account to</string>
    <string name="lbl_StartDate">Start date</string>
    <string name="lbl_FinishDate">Finish date</string>
    <string name="lbl_ExpireDate">Expire date</string>
    <string name="lbl_InitialValue">Initial value</string>
    <string name="lbl_LimitValue">Limit value</string>
    <string name="lbl_RealizedValue">Realized value</string>
    <string name="lbl_PlannedValue">Planned value</string>
    <string name="lbl_Taxes">Taxes</string>
    <string name="lbl_Interest">Interest</string>
    <string name="lbl_Priority">Priority</string>
    <string name="lbl_SavingRate">Saving rate</string>
    <string name="lbl_Status">Status</string>
    <string name="lbl_Type">Type</string>
    <string name="lbl_Class">Class</string>
    <string name="lbl_SubCategory">SubCategory</string>
    <string name="lbl_DatePlanned">Date planned</string>
    <string name="lbl_DateRealized">Date realized</string>
    <string name="lbl_ValuePlanned">Value planned</string>
    <string name="lbl_ValueRealized">Value realized</string>
    <string name="lbl_Year">Year</string>
    <string name="lbl_Month">Month</string>
    <string name="lbl_None">None</string>
    <string name="lbl_Day">Day</string>
    <string name="lbl_Week">Week</string>
    <string name="lbl_Forever">Forever</string>
    <string name="lbl_VirtualAssistant">Virtual assistant</string>
    <string name="lbl_05Minutes">5 minutes</string>
    <string name="lbl_10Minutes">10 minutes</string>
    <string name="lbl_15Minutes">15 minutes</string>
    <string name="lbl_20Minutes">20 minutes</string>
    <string name="lbl_25Minutes">25 minutes</string>
    <string name="lbl_30Minutes">30 minutes</string>
    <string name="lbl_Confirmation">Confirmation</string>
    <string name="lbl_Occurrence">Occurrence</string>
    <string name="lbl_Reminder">Reminder</string>
    <string name="lbl_Emergency">Emergency</string>
    <string name="lbl_Retirement">Retirement</string>
    <string name="lbl_generalStatus">General Status</string>
    <string name="lbl_Value">Value</string>
    <string name="lbl_Details">Details</string>
    <string name="lbl_Automatic">Automatic</string>
    <string name="lbl_BillToPay">Bill to pay</string>
    <string name="lbl_BillNotPaid">Bill not paid</string>
    <string name="lbl_Help">Help</string>
    <string name="lbl_Backup">Backup</string>
    <string name="lbl_UpdatedOn">Updated on</string>
    <string name="lbl_Restore">Restore</string>
    <string name="lbl_BackupYourData">Backup your data</string>
    <string name="lbl_RestoreYourData">Restore your data</string>
    <string name="lbl_ResetYourData">Reset your data</string>
    <string name="lbl_CashFlow">Cash Flow</string>
    <string name="lbl_Home">lbl_home</string>
    <string name="lbl_limit">Limit</string>
    <string name="lbl_Period">Period</string>
    <string name="lbl_Name">Name</string>
    <string name="lbl_Code">Code</string>
    <string name="lbl_Birthday">Birthday</string>
    <string name="lbl_Language">Language</string>
    <string name="lbl_Currency">Currency</string>
    <string name="lbl_SessionTime">Session time</string>
    <string name="lbl_Phone">Phone</string>
    <string name="lbl_Advertising">Advertising</string>
    <string name="lbl_TimeFormat">Time format</string>
    <string name="lbl_DateFormat">Date format</string>
    <string name="lbl_DecimalFormat">Decimal format</string>
    <string name="lbl_Report">Report</string>
    <string name="lbl_Tool">Tool</string>
    <string name="lbl_Key">Key</string>
    <string name="lbl_ChooseOneOption">"Choose one option</string>
    <string name="lbl_Fixed">Fixed</string>
    <string name="lbl_Variable">Variable</string>
    <string name="lbl_Extra">Extra</string>
    <string name="lbl_Additional">Additional</string>
    <string name="lbl_Obligation">Obligation</string>
    <string name="lbl_Category">Category</string>
    <string name="lbl_Account">Account</string>
    <string name="lbl_Transaction">Transaction</string>
    <string name="lbl_Transfer">Transfer</string>
    <string name="lbl_Budget">Budget</string>
    <string name="lbl_Goal">Goal</string>
    <string name="lbl_User">User</string>
    <string name="lbl_Active">Active</string>
    <string name="lbl_Liabilities">Liabilities</string>
    <string name="lbl_English">English</string>
    <string name="lbl_Portuguese">Portuguese</string>
    <string name="lbl_Spanish">Spanish</string>
    <string name="lbl_EmergencyFund">Emergency Fund</string>
    <string name="lbl_Transportation">Transportation</string>
    <string name="lbl_Habitation">Habitation</string>
    <string name="lbl_Training">Training</string>
    <string name="lbl_Family">Family</string>
    <string name="lbl_Health">Health</string>
    <string name="lbl_Charity">Charity</string>
    <string name="lbl_Party">Party</string>
    <string name="lbl_MyGoal">My Goal</string>
    <string name="lbl_Medium">Medium</string>
    <string name="lbl_High">High</string>
    <string name="lbl_Low">Low</string>
    <string name="lbl_BRL">BRL (Brazilian Real)</string>
    <string name="lbl_USD">USD (American Dollar)</string>
    <string name="lbl_EUR">EUR (Euro)</string>
    <string name="lbl_JPY">JPY (Japanese Yen)</string>
    <string name="lbl_GBP">GBP (British Pound)</string>
    <string name="lbl_CAD">CAD (Canadian Dollar)</string>
    <string name="lbl_CHF">CHF (Swiss Franc)</string>
    <string name="lbl_INR">INR (Indian rupee)</string>
    <string name="lbl_MXN">MXN (Mexican peso)</string>
    <string name="lbl_No">No</string>
    <string name="lbl_Yes">Yes</string>
    <string name="lbl_Asset">Asset</string>
    <string name="lbl_AccountChart">Chart of Accounts</string>
    <string name="lbl_AccountMaster">Account Master</string>
    <string name="lbl_GeneralDescription">General description</string>
    <string name="shr_UserAgreement">User agreement</string>
    <string name="shr_UserAgreement01">User Agreement 01</string>
    <string name="shr_UserAgreement02">User Agreement 02</string>
    <string name="shr_UserAgreement03">User Agreement 03</string>
    <string name="shr_UserAgreement04">User Agreement 04</string>
    <string name="shr_UserAgreement05">User Agreement 05</string>
    <string name="shr_UserAgreement06">User Agreement 06</string>
    <string name="shr_UserTool">User Toll</string>
    <string name="shr_UserTool01">User Tool 01</string>
    <string name="shr_UserTool02">User Tool 02</string>
    <string name="shr_UserTool03">User Tool 03</string>
    <string name="shr_UserTool04">User Tool 04</string>
    <string name="shr_UserTool05">User Tool 05</string>
    <string name="shr_UserTool06">User Tool 06</string>
    <string name="shr_FinancialHealth">Financial Health></string>
    <string name="shr_FinancialHealthIncome">Financial Health Income</string>
    <string name="shr_FinancialHealthOutcome">Financial Health Outcome</string>
    <string name="shr_FinancialHealthCashFlow">Financial Health Cash Flow</string>
    <string name="shr_FinancialHealthRetirement">Financial Health Retirement</string>
    <string name="shr_FinancialHealthEmergency">Financial Health Emergency</string>
    <string name="shr_FinancialHealthGoal">Financial Health Goal</string>
    <string name="shr_FinancialHealthInsurance">Financial Health Insurance</string>
    <string name="shr_FinancialHealthBudget">Financial Health Budget</string>
    <string name="shr_FinancialHealthNetWorth">Financial Health Net Worth</string>
    <string name="shr_FinancialHealthNotification">Financial Health Notification</string>
    <string name="shr_FinancialHealthAsset">Financial Health Asset</string>
    <string name="shr_FinancialHealthLoan">Financial Health Loan</string>
    <string name="lbl_LowerLimitEmergency">Lower emergency</string>
    <string name="lbl_UpperLimitEmergency">Upper emergency</string>
    <string name="lbl_LowerLimitRetirement">Lower retirement</string>
    <string name="lbl_UpperLimitRetirement">Upper retirement</string>
    <string name="lbl_LowerLimitIncome">Lower income</string>
    <string name="lbl_UpperLimitIncome">Upper income</string>
    <string name="lbl_LowerLimitOutcome">Lower outcome</string>
    <string name="lbl_UpperLimitOutcome">Upper outcome</string>
    <string name="lbl_LowerLimitGoal">Lower goal</string>
    <string name="lbl_UpperLimitGoal">Upper goal</string>
    <string name="lbl_LowerLimitBudget">Lower budget</string>
    <string name="lbl_UpperLimitBudget">Upper budget</string>
    <string name="lbl_Income">Income</string>
    <string name="lbl_Outcome">Outcome</string>
    <string name="hnt_email">Enter your email address</string>
    <string name="hnt_old_email">Enter your old email</string>
    <string name="hnt_new_email">Enter your new email</string>
    <string name="hnt_password">Enter your password code</string>
    <string name="hnt_old_password">Enter your old password</string>
    <string name="hnt_new_password">Enter your new password</string>
    <string name="hnt_name">Enter name</string>
    <string name="hnt_StartDate">Enter start date</string>
    <string name="hnt_FinishDate">Enter finish date</string>
    <string name="hnt_ExpireDate">Enter expire date</string>
    <string name="hnt_InitialValue">Enter initial value</string>
    <string name="hnt_LimitValue">Enter limit value</string>
    <string name="hnt_Taxes">Enter taxes</string>
    <string name="hnt_Interest">Enter interest</string>
    <string name="hnt_PlannedDate">Enter planned date</string>
    <string name="hnt_RealizedDate">Enter realized date</string>
    <string name="hnt_PlannedValue">Enter planned value</string>
    <string name="hnt_RealizedValue">Enter realized value</string>
    <string name="hnt_Occurrence">Enter occurrence</string>
    <string name="hnt_Year">Enter year</string>
    <string name="hnt_Month">Enter month</string>
    <string name="hnt_Transaction">Enter transaction</string>
    <string name="hnt_Category">Enter category</string>
    <string name="hnt_SubCategory">Enter subcategory</string>
</resources>